# smd

./: LICENSE  README.md  SPEC.md  pyproject.toml
docs/: EDIT_OPERATIONS.md  JSON_CONTRACT.md  UI_INTEGRATION.md
examples/: contextfit.smd
schema/: smd.schema.json
src/smd/: __init__.py  cli.py  model.py  parser.py  validate.py
tests/: test_cli.py  test_export_contract.py  test_parser.py  test_validate.py
