[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smd"
version = "0.1.0"
description = "Story Markdown: agent-native presentation and storytelling format"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Christophe Ponsart" }
]
keywords = ["markdown", "presentation", "story", "agent", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
smd = "smd.cli:main"

[project.urls]
Homepage = "https://github.com/ContextFit/smd"
Repository = "https://github.com/ContextFit/smd"

[tool.hatch.build.targets.wheel]
packages = ["src/smd"]
